[tool.poetry]
	name        = "tos-options-dashboard"
	version     = "0.1.0"
	description = ""
	authors     = ["eo1989 <eorlowski6@gmail.com>"]
	license     = "MIT"
	readme      = "README.md"
	packages    = [{include = "tos_options_dashboard"}]

	[tool.poetry.dependencies]
		python                    = "^3.10"
		dash                      = "^2.10.0"
		click                     = "^8.1.0"
		numpy                     = "^1.25.0"
		matplotlib                = "^3.7.0"
		plotly                    = "^5.15.0"
		scipy                     = "^1.10.0"
		requests                  = "^2.31.0"
		Flask                     = "^2.3.0"
		Flask-Compress            = "^1.10"
		Pillow                    = "^9.5.0"
		certifi                   = "^2023.5.7"
		chardet                   = "^5.1.0"
		colorama                  = "^0.4.6"
		cycler                    = "^0.11.0"
		dash-bootstrap-components = "^1.4.1"
		dash-core-components      = "^2.0.0"
		dash-renderer             = "^1.9.1"
		dash-table                = "^5.0.0"
		Werkzeug                  = "^2.3.6"
		kiwisolver                = "^1.4.4"
		pandas                    = "^2.0.0"

[build-system]
	requires      = ["poetry-core"]
	build-backend = "poetry.core.masonry.api"
